# mingldingl_engine/swagger.json
@@ -7504,6 +7504,11 @@
           },
           "videoEnabled": {
             "type": "boolean"
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
           }
         },
         "additionalProperties": false
